# 3d-renderer

./: .gitignore  CMakeLists.txt  main.cpp
asteroid/: offsetter.py
glsl/: color.frag  flatLight.frag  flatLight.vert  grid.vert  post.frag  post.vert  simpleTexture.frag
inner/: buffer.cpp  buffer.h  context.cpp  context.h  event_handler.cpp  event_handler.h  render_target.cpp  render_target.h  state.cpp  state.h  vao.cpp  vao.h
model/: mesh.cpp  mesh.h  model.cpp  model.h  model_loader.cpp  model_loader.h  texture.cpp  texture.h  texture_loader.cpp  texture_loader.h
scene/: camera.cpp  camera.h  object.h  scene.cpp  scene.h
shader/: shader.cpp  shader.h  shader_loader.cpp
stb_image/: CMakeLists.txt
